updating temporal contrast fix

--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -118,7 +118,7 @@
     }
 
     p span.section-title {
-        font-size: 20px;
+        /*font-size: 20px;*/
     }
 
     .images-grid-container {
